# ghc-env-breaks-ghcid-server-watch-using-lib-home-and-test-suite-imports-lib-deps-from-common-stanza

./: LICENSE  Makefile  cabal.project  minimal-reproduction.cabal
src/app/: Main.hs
src/lib/: Dotenv.hs
src/lib/MinimalRepro/: Server.hs
src/spec/: Main.hs
