cabal-version: 3.4
name: minimal-reproduction
version: 0.1.0.0
category: Web
build-type: Simple
extra-source-files: README.md

common core
    default-language: Haskell2010
    build-depends: base
    build-tool-depends: ghcid:ghcid

-- See [NOTE: GHCid workaround]
common library-requirements
    hs-source-dirs: src/lib
    other-modules:
        -- GHCid detects changes to Modules in `other-modules`
        Dotenv
    build-depends:
        scotty
      , dotenv

library libminimalrepro
    import: core
    import: library-requirements
    -- Library entrypoint in `exposed-modules` can be used by executable
    exposed-modules:
        MinimalRepro.Server

executable minimal-repro-server
    import: core
    main-is: Main.hs
    hs-source-dirs: src/app
    build-depends:
        minimal-reproduction:libminimalrepro

test-suite test-minimal-reproduction
    import: core
    import: library-requirements
    hs-source-dirs: src/spec
    other-modules:
        -- Library entrypoint must be in test suite's `other-modules` to
        -- allow GHCid to run the server on build success when using the
        -- workaround of running the Cabal REPL with the test suite home
        -- unit to watch the library instead of using the library itself
        -- as the home unit.
        --
        -- Using the library as home unit to rerun the server on changes
        -- to the library prompts a stack overflow before GHCid can even
        -- launch the REPL when we use a common stanza so the test suite
        -- can access the library source files (although I haven't tried
        -- just duplicating everything without a common stanza).
        MinimalRepro.Server
        -- Test suite entrypoint must be in test suite's `other-modules`
        -- so that it can be run by GHCid on build success when watching
        -- the test suite.
      , Spec
    build-tool-depends:
        hspec-discover:hspec-discover
    build-depends:
        minimal-reproduction:libminimalrepro
      , hspec
    type: exitcode-stdio-1.0
    main-is: Main.hs
